--- a/index.html
+++ b/index.html
@@ -52,20 +52,16 @@
             <div class="shop-section">
                 <h2>Redeem Your Points</h2>
                 <p>Your current points: <span id="shopPoints">0</span></p>
-                <p>Discount codes available:</p>
+
                 <div class="shop-items">
                     <div class="item">
-                        <p>10 points - <span class="code">SENIOR10</span></p>
-                        <button class="redeemBtn" data-points="10">Redeem</button>
+                        <p>Buy another try for <strong>15 points</strong></p>
+                        <button class="redeemBtn" id="buyAttemptBtn">Buy Attempt</button>
                     </div>
-                    <div class="item">
-                        <p>20 points - <span class="code">SENIOR20</span></p>
-                        <button class="redeemBtn" data-points="20">Redeem</button>
-                    </div>
-                    <div class="item">
-                        <p>30 points - <span class="code">SENIOR30</span></p>
-                        <button class="redeemBtn" data-points="30">Redeem</button>
-                    </div>
+                </div>
+
+                <div id="moreComingSoon">
+                    <p>More coming soon...</p>
                 </div>
             </div>
         </div>
@@ -79,3 +75,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
