--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Password Strength Checker</h1>
             <p>Learn how to create strong, secure passwords!</p>
         </div>
-        
+
         <div class="tabs">
             <button class="tablinks" id="checkerTabBtn" onclick="openTab(event, 'checker')">Password Checker</button>
             <button class="tablinks" id="shopTabBtn" onclick="openTab(event, 'shop')">Shop</button>
@@ -52,16 +52,20 @@
             <div class="shop-section">
                 <h2>Redeem Your Points</h2>
                 <p>Your current points: <span id="shopPoints">0</span></p>
-
+                <p>Discount codes available:</p>
                 <div class="shop-items">
                     <div class="item">
-                        <p>Buy another try for <strong>15 points</strong></p>
-                        <button class="redeemBtn" id="buyAttemptBtn">Buy Attempt</button>
+                        <p>10 points - <span class="code">SENIOR10</span></p>
+                        <button class="redeemBtn" data-points="10">Redeem</button>
                     </div>
-                </div>
-
-                <div id="moreComingSoon">
-                    <p>More coming soon...</p>
+                    <div class="item">
+                        <p>20 points - <span class="code">SENIOR20</span></p>
+                        <button class="redeemBtn" data-points="20">Redeem</button>
+                    </div>
+                    <div class="item">
+                        <p>30 points - <span class="code">SENIOR30</span></p>
+                        <button class="redeemBtn" data-points="30">Redeem</button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -75,4 +79,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
